@@ -25,6 +25,9 @@ func TestConditionParse(t *testing.T) {
 		{"version not like  '1 2 3'", &Condition{keyword: "version", operator: ContainsNot, value: "1 2 3"}},
 		{"state is not 0", &Condition{keyword: "state", operator: Unequal, value: "0"}},
 		{"used gt 0", &Condition{keyword: "used", operator: Greater, value: "0"}},
+		{"command ~~ /ssh localhost/", &Condition{keyword: "command", operator: RegexMatchNoCase, value: "ssh localhost"}},
+		{"command ~ /ssh localhost/i", &Condition{keyword: "command", operator: RegexMatchNoCase, value: "ssh localhost"}},
+		{"command ~ /ssh localhost/", &Condition{keyword: "command", operator: RegexMatch, value: "ssh localhost"}},
 		{"state not in ('started')", &Condition{keyword: "state", operator: NotInList, value: []string{"started"}}},
 		{"state in ('a', 'b','c')", &Condition{keyword: "state", operator: InList, value: []string{"a", "b", "c"}}},
 		{"state in ('a', 'b','c','d' )", &Condition{keyword: "state", operator: InList, value: []string{"a", "b", "c", "d"}}},
