@@ -1,5 +1,8 @@
 This file documents the revision history for the SNClient+ agent.
 
+next:
+         - support filter regex syntax: attr ~~ /value/
+
 0.10       Sun Oct 22 21:22:47 CEST 2023
          - windows: add firewall on program, not ports
          - add on demand macros
